feat: get all products
